objects/IPM_Risk_Indicator__c.object
<CustomObject>
    <description>IPMG - Used to capture the month to month (or by adhoc frequency) of the Risk Indicator against an Insurer (Account)</description>
    <fields>
        <fullName>IPM_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Identifies the Account that this Risk Indicator belongs to</description>
        <inlineHelpText>Identifies the Account that this Risk Indicator belongs to</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Risk Indicators</relationshipLabel>
        <relationshipName>Risk_Indicators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Approval_Request_Text__c</fullName>
        <defaultValue>&quot;Ensure you have provided all necessary information on the Comments and link to S Drive. By clicking Save below, you will be submitting the Request for Rerating for approval.&quot;</defaultValue>
        <description>Used to display instructions on Custom Action</description>
        <label>Approval Request Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to trigger process builder to update Risk Rating</description>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Batch_Number__c</fullName>
        <label>Batch Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Date__c</fullName>
        <description>Date of Risk Rating</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IPM_Details_of_Risk__c</fullName>
        <description>Describes the reasoning behind the Risk Rating for this particular Risk Indicator (for this date)</description>
        <inlineHelpText>Describes the reasoning behind the Risk Rating for this particular Risk Indicator (for this date)</inlineHelpText>
        <label>Details of Risk</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Group_Average__c</fullName>
        <label>Group Average</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Indicator_Display__c</fullName>
        <formula>IPM_Indicator_Name__r.Name   + BR()</formula>
        <label>Indicator Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Indicator_Name_Text__c</fullName>
        <formula>IPM_Indicator_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Indicator Name (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Indicator_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Risk Indicator Name</label>
        <referenceTo>IPM_Risk_Indicator_Reference__c</referenceTo>
        <relationshipLabel>Risk Indicators</relationshipLabel>
        <relationshipName>Risk_Indicators</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IPM_Latest__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Latest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Request_for_New_Rating_Reason__c</fullName>
        <description>Used for Rerating Approval process</description>
        <label>Request for New Rating Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IPM_Requested_New_Rating__c</fullName>
        <description>Used for Rerating Approval Process</description>
        <label>Requested New Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Rerated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies whether this Risk Indicator has been rerated</description>
        <inlineHelpText>Identifies whether this Risk Indicator has been rerated</inlineHelpText>
        <label>Rerated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPM_Risk_Rating_Colour__c</fullName>
        <formula>IF( AND( value(TEXT(IPM_Risk_Rating__c)) &gt;=1, value(TEXT(IPM_Risk_Rating__c)) &lt;= 6) , &quot;Green&quot;, 
IF( AND( value(TEXT(IPM_Risk_Rating__c)) &gt;=7, value(TEXT(IPM_Risk_Rating__c)) &lt;= 15) , &quot;Yellow&quot;, 
IF( AND( value(TEXT(IPM_Risk_Rating__c)) &gt;=16, value(TEXT(IPM_Risk_Rating__c)) &lt;= 22) , &quot;Orange&quot;, 
IF( AND( value(TEXT(IPM_Risk_Rating__c)) &gt;=23, value(TEXT(IPM_Risk_Rating__c)) &lt;= 25) , &quot;Red&quot;,
&quot;&quot; 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Rating Colour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Risk_Rating_Image__c</fullName>
        <description>Graphical interpretation of the Risk Rating values:
1-6 = Green Low Risk
7-15 = Yellow Medium Risk
16-22 = Orange High Risk
23-25 = Red Extreme Risk</description>
        <formula>IF( AND( value(TEXT(IPM_Risk_Rating__c)) &gt;=1, value(TEXT(IPM_Risk_Rating__c)) &lt;= 6) , IMAGE(&quot;/servlet/servlet.FileDownload?file=015N0000000SfS2&quot;, &quot;Green&quot;),
IF( AND( value(TEXT(IPM_Risk_Rating__c)) &gt;=7, value(TEXT(IPM_Risk_Rating__c)) &lt;= 15) , IMAGE(&quot;/servlet/servlet.FileDownload?file=015N0000000SfS5&quot;, &quot;Yellow&quot;),
IF( AND( value(TEXT(IPM_Risk_Rating__c)) &gt;=16, value(TEXT(IPM_Risk_Rating__c)) &lt;= 22) , IMAGE(&quot;/servlet/servlet.FileDownload?file=015N0000000SfS3&quot;, &quot;Orange&quot;),
IF( AND( value(TEXT(IPM_Risk_Rating__c)) &gt;=23, value(TEXT(IPM_Risk_Rating__c)) &lt;= 25) , IMAGE(&quot;/servlet/servlet.FileDownload?file=015N0000000SfS4&quot;, &quot;Red&quot;),&quot;&quot;
)
)
)
)</formula>
        <label>Risk Rating Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPM_Risk_Rating_Report__c</fullName>
        <description>Used to convert Risk Rating to a number</description>
        <formula>VALUE( TEXT(IPM_Risk_Rating__c ))</formula>
        <inlineHelpText>Used to convert Risk Rating to a number</inlineHelpText>
        <label>Risk Rating (Report)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPM_Risk_Rating__c</fullName>
        <label>Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <color>#009900</color>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <color>#009900</color>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <color>#009900</color>
                    <label>3</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <color>#009900</color>
                    <label>4</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <color>#009900</color>
                    <label>5</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <color>#009900</color>
                    <label>6</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <color>#FFFF66</color>
                    <label>7</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <color>#FFFF66</color>
                    <label>8</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <color>#FFFF66</color>
                    <label>9</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <color>#FFFF66</color>
                    <label>10</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <color>#FFFF66</color>
                    <label>11</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <color>#FFFF66</color>
                    <label>12</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <color>#FFFF66</color>
                    <label>13</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <color>#FFFF66</color>
                    <label>14</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <color>#FFFF66</color>
                    <label>15</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <color>#FF6600</color>
                    <label>16</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <color>#FF6600</color>
                    <label>17</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <color>#FF6600</color>
                    <label>18</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <color>#FF6600</color>
                    <label>19</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <color>#FF6600</color>
                    <label>20</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <color>#FF6600</color>
                    <label>21</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <color>#FF6600</color>
                    <label>22</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <color>#FF0000</color>
                    <label>23</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <color>#FF0000</color>
                    <label>24</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <color>#FF0000</color>
                    <label>25</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_S_Drive_Folder__c</fullName>
        <description>Used for Rerating Approval process</description>
        <label>S Drive Folder</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IPM_Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Batch - Automated</fullName>
                </value>
                <value>
                    <fullName>Manual - User Created</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IPM_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the submitter user to use in the Approval process to outcome emails</description>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Risk_Indicators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_From__c</fullName>
        <description>Identifies where the request came from</description>
        <inlineHelpText>Identifies where the request came from</inlineHelpText>
        <label>Request From</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insurer Identified</fullName>
                </value>
                <value>
                    <fullName>SIRA Identified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Risk Indicator</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IPM_Indicator_Name__c</columns>
        <columns>IPM_Account__c</columns>
        <columns>IPM_Risk_Rating_Image__c</columns>
        <columns>IPM_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RI{000000}</displayFormat>
        <label>Risk Indicator Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Indicators</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>IPM_Risk_Ind_created_to_Active_Reference</fullName>
        <active>true</active>
        <description>New Risk Indicator records should only be created against Active Risk Indicator Reference records</description>
        <errorConditionFormula>AND( ISNEW() ,
TEXT(IPM_Indicator_Name__r.IPM_Status__c)  &lt;&gt; &quot;Active&quot;)</errorConditionFormula>
        <errorDisplayField>IPM_Indicator_Name__c</errorDisplayField>
        <errorMessage>Risk Indicator should only be created against Active Risk Indicator References</errorMessage>
    </validationRules>
</CustomObject>